--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "query-string": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-number-format": "^4.9.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "sass": "^1.50.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
